wlrexamples: Wrappers for Keyboard, KeyboardKeyEvent